docs: rewrite README to reflect current state; remove obsolete frontend doc
- README.md 全面更新：完整目录结构、技术栈、6 大业务模块（含秒杀事务消息/成长值/
  二级评论/标签跳转）、pgvector 初始化、小程序构建、CI、JMeter 压测入口
- 删除 README-FRONTEND.md（外部旧前端目录已不存在、小程序不完整状态已过时）

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>